<resources>
    <string name="app_name">homework3</string>
    <string name="open_screen_audio_player">Open screen AudioPlayer</string>
    <string name="open_screen_telegram">Open screen Telegram</string>
    <string name="open_screen_calculator">Open screen Calculator</string>
    <string name="open_screen_facebook">Open screen Facebook</string>
    <string name="screen_without_constraintlayout">Screen without ConstraintLayout:</string>
    <string name="screen_with_constraintlayout">Screen with ConstraintLayout:</string>

    <string name="settings_username">Данияр Байганов</string>
    <string name="settings_status">online</string>
    <string name="settings_text_account">Account</string>
    <string name="label_settings">Settings</string>
    <string name="settings_number">+791111111111</string>
    <string name="settings_label_phone_number">Tap to change phone number</string>
    <string name="settings_login">BuyDan</string>
    <string name="settings_label_login">Username</string>
    <string name="settings_default_bio">Bio</string>
    <string name="label_notifications_and_sounds">Notifications and Sounds</string>
    <string name="label_privacy_and_security">Privacy and Security</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="devices">Devices</string>
    <string name="chat_folders">Chat Folders</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="icon_devices">icon devices</string>
    <string name="icon_chat">icon chat</string>
    <string name="icon_storage">icon storage</string>
    <string name="icon_security">icon security</string>
    <string name="icon_notifications">icon notifications</string>
    <string name="now_playing">Сейчас играет</string>
    <string name="music_in_car">Музыка в машину</string>
    <string name="logo_of_song">logo of song</string>
    <string name="default_song">Angel</string>
    <string name="default_author">R. Armando Morabito</string>
    <string name="start_time">0:00</string>
    <string name="end_time">5:27</string>
    <string name="sign_equals">=</string>
    <string name="sign_comma">,</string>
    <string name="sign_zero">0</string>
    <string name="sign_plus_and_minus">+/-</string>
    <string name="sign_plus">+</string>
    <string name="sign_three">3</string>
    <string name="sign_two">2</string>
    <string name="sign_one">1</string>
    <string name="sign_minus">-</string>
    <string name="sign_six">6</string>
    <string name="sign_five">5</string>
    <string name="sign_four">4</string>
    <string name="sign_multiply">x</string>
    <string name="sign_nine">9</string>
    <string name="sign_eight">8</string>
    <string name="sign_seven">7</string>
    <string name="sign_divider">/</string>
    <string name="sign_percent">%</string>
    <string name="sign_brackets">()</string>
    <string name="sign_cancel">C</string>
    <string name="backspace">backspace</string>
    <string name="button_math">button math</string>
    <string name="button_rule">button rule</string>
    <string name="button_history">button history</string>
    <string name="login">Войти</string>
    <string name="hint_phone_or_email">Телефон или электронная почта</string>
    <string name="hint_password">Пароль</string>
    <string name="forgot_password">Забыли \n пароль?</string>
</resources>